[package]
name = "filehosting-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["sqlite"] }
serde = { version = "1.0", features = ["derive"] }
rusqlite = "0.29"